--- a/_manuscript/_tex/references.bib
+++ b/_manuscript/_tex/references.bib
@@ -181,3 +181,122 @@ Publisher: Sigma XI-The Scientific Research Society},
 	doi = {10.1186/s12915-024-02101-x},
 	url = {https://doi.org/10.1186/s12915-024-02101-x}
 }
+
+@inproceedings{simson2025,
+	title = {Preventing Harmful Data Practices by using Participatory Input to Navigate the Machine Learning Multiverse},
+	author = {Simson, Jan and Draxler, Fiona and Mehr, Samuel and Kern, Christoph},
+	year = {2025},
+	month = {04},
+	date = {2025-04-25},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}30},
+	series = {CHI '25},
+	doi = {10.1145/3706598.3713482},
+	url = {https://dl.acm.org/doi/10.1145/3706598.3713482},
+	address = {New York, NY, USA}
+}
+
+@inproceedings{liu2020,
+	title = {Paths Explored, Paths Omitted, Paths Obscured: Decision Points & Selective Reporting in End-to-End Data Analysis},
+	author = {Liu, Yang and Althoff, Tim and Heer, Jeffrey},
+	year = {2020},
+	month = {04},
+	date = {2020-04-23},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}14},
+	series = {CHI '20},
+	doi = {10.1145/3313831.3376533},
+	url = {https://dl.acm.org/doi/10.1145/3313831.3376533},
+	address = {New York, NY, USA}
+}
+
+@inproceedings{beltagy2019,
+	title = {Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
+	author = {Beltagy, Iz and Lo, Kyle and Cohan, Arman},
+	year = {2019},
+	date = {2019},
+	publisher = {Association for Computational Linguistics},
+	pages = {3613--3618},
+	doi = {10.18653/v1/D19-1371},
+	url = {https://www.aclweb.org/anthology/D19-1371},
+	address = {Hong Kong, China},
+	langid = {en}
+}
+
+@article{lee2020,
+	title = {BioBERT: a pre-trained biomedical language representation model for biomedical text mining},
+	author = {Lee, Jinhyuk and Yoon, Wonjin and Kim, Sungdong and Kim, Donghyeon and Kim, Sunkyu and So, Chan Ho and Kang, Jaewoo},
+	editor = {Wren, Jonathan},
+	year = {2020},
+	month = {02},
+	date = {2020-02-15},
+	journal = {Bioinformatics},
+	pages = {1234--1240},
+	volume = {36},
+	number = {4},
+	doi = {10.1093/bioinformatics/btz682},
+	url = {https://academic.oup.com/bioinformatics/article/36/4/1234/5566506},
+	langid = {en}
+}
+
+
+@article{liu,
+	title = {RoBERTa: A Robustly Optimized BERT Pretraining Approach},
+	author = {Liu, Yinhan and Ott, Myle and Goyal, Naman and Du, Jingfei and Joshi, Mandar and Chen, Danqi and Levy, Omer and Lewis, Mike and Zettlemoyer, Luke and Stoyanov, Veselin},
+	doi = {10.48550/arXiv.1907.11692}
+}
+
+@inproceedings{devlin2019,
+	title = {NAACL-HLT 2019},
+	author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+	editor = {Burstein, Jill and Doran, Christy and Solorio, Thamar},
+	year = {2019},
+	month = {06},
+	date = {2019-06},
+	publisher = {Association for Computational Linguistics},
+	pages = {4171{\textendash}4186},
+	doi = {10.18653/v1/N19-1423},
+	url = {https://aclanthology.org/N19-1423/},
+	address = {Minneapolis, Minnesota}
+}
+
+@article{dai,
+	title = {Transformer-XL: Attentive Language Models Beyond a Fixed-Length Context},
+	author = {Dai, Zihang and Yang, Zhilin and Yang, Yiming and Carbonell, Jaime and Le, Quoc V. and Salakhutdinov, Ruslan},
+	doi = {10.48550/arXiv.1901.02860}
+}
+
+@article{yang,
+	title = {XLNet: Generalized Autoregressive Pretraining for Language Understanding},
+	author = {Yang, Zhilin and Dai, Zihang and Yang, Yiming and Carbonell, Jaime and Salakhutdinov, Ruslan and Le, Quoc V.},
+	doi = {10.48550/arXiv.1906.08237},
+	langid = {en}
+}
+
+@inproceedings{kale2019,
+	title = {Decision-Making Under Uncertainty in Research Synthesis: Designing for the Garden of Forking Paths},
+	author = {Kale, Alex and Kay, Matthew and Hullman, Jessica},
+	year = {2019},
+	month = {05},
+	date = {2019-05-02},
+	publisher = {Association for Computing Machinery},
+	pages = {1{\textendash}14},
+	series = {CHI '19},
+	doi = {10.1145/3290605.3300432},
+	url = {https://dl.acm.org/doi/10.1145/3290605.3300432},
+	address = {New York, NY, USA}
+}
+
+@article{alspaugh2019,
+	title = {Futzing and Moseying: Interviews with Professional Data Analysts on Exploration Practices},
+	author = {Alspaugh, Sara and Zokaei, Nava and Liu, Andrea and Jin, Cindy and Hearst, Marti A.},
+	year = {2019},
+	month = {01},
+	date = {2019-01},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {22--31},
+	volume = {25},
+	number = {1},
+	doi = {10.1109/TVCG.2018.2865040},
+	url = {https://ieeexplore.ieee.org/document/8440815}
+}
