--- a/index.qmd
+++ b/index.qmd
@@ -7,11 +7,18 @@ authors:
   - name: Roger D. Peng
     affiliation: University of Texas at Austin
 bibliography: references.bib
+abstract: this is the abstract
 link-citations: true
 number-sections: true
 ---
 
 # Introduction
+
+Something about "analysis review" - Roger thinks it's a better to have a new word for this.
+
+provide a baseline understand - place to start
+
+demonstrate - analytically homogeneous - the table won't look like that
 
 In this work, we design a tabular format to record the choices made by analysts during data analysis. Using large language models, we automatically extract these choices from a set of research papers focused on specific topics, e.g. air pollution modelling. This allows us to analyze these choices as data – tracking how they've changed over time or query the possible methodologies used in similar studies. We also introduce a workflow to cluster paper based on decision similarity, using both the decisions themselves and the justifications authors provide for their choices.
 
@@ -21,28 +28,22 @@ Data analysis as an complicated, iterative process to make sense \[ref\] of the 
 
 Choices are made at nearly every stage of data analysis, ranging from variable pre-processing variables, variable and lag selection in model formulation, to the specification of smoothing parameter during model construction. These possible choices contribute to what @gelman2014 describe as the "garden of forking paths". These choices can introduce substantial variability in results, which has been demonstrated in many-analyst experiments, where independent teams analyzing the same dataset to answer a pre-defined research question often arrive at markedly different conclusions. A prominent example is @silberzahn2018 where researchers reported a wide range of point estimates and 95% confidence intervals for the effect of soccer players’ skin tone on the number of red cards awarded by referees (odds ratio from 0.89 to 2.93). Similar findings have emerged in other domains, including structural equation modeling [@sarstedt2024], applied microeconomics [@huntington-klein2021], neuroimaging [@botvinik-nezer2020], and ecology and evolutionary biology [@gould2025].
 
-Given this nature that a wide range of choices can be justified, there has been the long discussion of p-hacking and other misuse of statistics in practical data analysis in publication. \[more on p-hacking and reseracher's degree of freedom\]. Some proposed guidelines and recommendation to overcome this through pre-registration.
+Another line of work focuses on developing software tools to support analysts in making more informed decisions. For example, the `Tisane` package [@jun2022] integrates conceptual ideas, such as DAGs, and modelling structure (group/ cluster/ hierarchical structure), to assist junior researchers in specifying GLM and GLMM model. The `DeclareDesign` package [@blair2019] introduces the MIDA framework for researchers to declare, diagnose, and redesign their analyses to produce a distribution of the statistic of interest. This approach has been applied in randomized controlled trial [@bishop2024] .
 
--   pre-registration
--   @wicherts2016degrees provides a checklist of researcher degrees of freedom to combat the "garden of forking paths" problem
--   false-positive psychology suggests 6 guidelines for reporting data analysis to prevent false-positive rate
+The `multiverse` package
 
-Another line of work focuses on developing software tools to support analysts in making more informed decisions. For example, the `Tisane` package [@jun2022] integrates conceptual ideas, such as DAGs, and modelling structure (group/ cluster/ hierarchical structure), to assist junior researchers in specifying GLM and GLMM model. The `DeclareDesign` package [@blair2019] introduces the MIDA framework for researchers to declare, diagnose, and redesign their analyses to produce a distribution of the statistic of interest. This approach has been applied in randomized controlled trial [@bishop2024] . The `multiverse` package facilitates the specification and execution of multiple parallel choices for sensitivity analysis, allowing researchers to systematically explore how different choices affect results and to report the range of plausible outcomes that arise from alternative analytic paths.
+-   facilitates the specification and execution of multiple parallel choices for sensitivity analysis, allowing researchers to systematically explore how different choices affect results and to report the range of plausible outcomes that arise from alternative analytic paths.
 
--   Study decisions in data analysis:
+Study decisions in data analysis:
 
-    -   an interview/ participatory method: @simson, many others
-    -   (automated) visualization of decisions made in data analysis:
-        -   datamation [@pu2023],
-        -   @liu2020paths uses Analytic Decision Graphs (ADG) to represent high-level decision process in data analysis.
-        -   [Urania: Visualizing Data Analysis Pipelines for Natural Language-Based Data Exploration](https://arxiv.org/pdf/2306.07760)
-
-# Construct decision databases
+-   interview analysts and researchers to provide recommendation for data analysis practices [@kale2019; @alspaugh2019; @liu2020].
+-   @liu2020 provides visualization to communicate the decision processes through the Analytic Decision Graphs (ADG)
+-   @simson2025 conducts a participatory AI study to demonstrate the "garden of forking paths" of decisions in data analysis and how it affects ML fairness
 
 ## Recording decisions in data analysis
 
 -   give example from extracting decision from sentences of a paper
--   adapt from the tidy data principle [@tidydata], each row is a decision @wickham2014\
+-   adapt from the tidy data principle - each row is a decision @wickham2014\
 -   some decisions are related to how the variable is estimated spatially and temporally
 -   model level decisions on how the model is estimated spatially (for multi-site analyses) and/or temporally (different treatments for years or seasons)
 -   sometimes the decisions are not explicitly stated in the paper (use AIC to choose the degree of freedom in a smoothing spline)
@@ -59,7 +60,13 @@ A hypothetical database of decisions may look as follows:
 
 ## Austomatic reading of literature with LLM
 
--   We use LLM to automatic read the paper through the `ellmer` package [@ellmer] and manually review the decision outputs. Both Antropic Claude and Google Gemini accept pdf inputs and we choose Claude. The prompt used to finetune the Claude LLM is available in the appendix.
+-   We use LLM to automatic process the literature to output analysis decisions. Currently, two LLMs, Antropic Claude and Google Gemini, are able to take input of pdf documents and the results reported in this paper is based on Gemini's output. See the section sensitivity analysis for the comparison of the two models.
+-   Claude is decoder only, Gemini is an encoder–decoder model
+    -   these models may paraphrase or hallucinate unless explicitly told not to since it is generative in nature based on the predicted probability of the next word from the text and the instruction
+-   prompt: instruct the LLM to produce a markdown file with decisions included in a JSON block with the fields described in Section xxx
+-   use the `ellmer` package [@ellmer] to connect to Gemini API to process the pdf documents in R.
+-   experiment with seed and temperature
+-   Our task involve a reasoning component in that it requires casual reasoning to identify the decisions made by the authors, and its justification/ rationale, rather than purely summarizing the text through pattern-matching.
 
 ## Review the LLM output
 
@@ -73,7 +80,7 @@ A hypothetical database of decisions may look as follows:
 -   All the actions will generate the corresponding codes.
 -   The download button will download the modified decision database as a csv file
 
-### Decision quality summary
+## Decision quality summary
 
 # Calculate paper similarity
 
@@ -89,6 +96,12 @@ A hypothetical database of decisions may look as follows:
     -   check/ report on the number of decisions compared in each paper pair
 -   similarity score can serve as the distance matrix to cluster papers by their similarity on decision choices
 
+## Sensitivity analysis
+
+sensitivity of the pipeline: 1) LLM, 2) text model, 3) prompt, 4) LLM parameters
+
+-   standard `BERT` [@devlin2019], `Roberta` [@liu]: trained on a much larger dataset (160GB v.s. BERT's 15GB), `transformer-xl` [@dai], `xlnet` by Google Brain [@yang], and two domain-trained BERT models: `sciBert` [@beltagy2019] and `bioBert`[@lee2020], trained on PubMed and PMC data.
+
 # Applications
 
 ## Air pollution mortality modelling
@@ -102,5 +115,7 @@ A hypothetical database of decisions may look as follows:
 # Discussion
 
 -   Only prompting engineering is used to extract decisions from the literature. We expect that fine-tuning the model on statistical or domain-specific literature to yield more robust performance on the same document, though it would require substantially more training effort.
+-   people from the NYU-LMU workshop are interested to have code script attached as well because people can do one thing in the script but report another in the paper - it would be interesting to compare the paper and the script with some syntax extraction.
+-   Validation of the output:
 
 # Reference
